openapi type
