# cmd/server/main.go
@@ -4,6 +4,7 @@ import (
 	"trygobun/internal/account"
 	"trygobun/internal/db"
 	"trygobun/internal/env"
+	"trygobun/internal/server"
 
 	"github.com/labstack/echo/v4"
 )
@@ -20,9 +21,7 @@ func main() {
 		e.Logger.Fatal(err)
 	}
 
-	e.GET("/account/:id", account.GetHandlerFunc(db))
-	e.PUT("/account/:id", account.UpdateHandlerFunc(db))
-	e.POST("/account", account.RegisterHandlerFunc(db))
+	server.RegisterHandlers(e, account.NewHandlers(db))
 
 	if err := e.Start(srvEnv.Host()); err != nil {
 		e.Logger.Fatal(err)
