# internal/server/server.gen.go
@@ -1,7 +1,7 @@
-// Package account provides primitives to interact with the openapi HTTP API.
+// Package server provides primitives to interact with the openapi HTTP API.
 //
 // Code generated by github.com/deepmap/oapi-codegen version v1.15.0 DO NOT EDIT.
-package account
+package server
 
 import (
 	"fmt"
@@ -15,13 +15,13 @@ import (
 type ServerInterface interface {
 	// Creates a new account
 	// (POST /account)
-	AddAccount(ctx echo.Context) error
+	PostAccount(ctx echo.Context) error
 	// Returns account by id
 	// (GET /account/{id})
-	AccountIdGet(ctx echo.Context, id int64) error
+	GetAccount(ctx echo.Context, id int64) error
 	// Update account by id
 	// (PUT /account/{id})
-	AccountIdPut(ctx echo.Context, id int64) error
+	PutAccount(ctx echo.Context, id int64) error
 }
 
 // ServerInterfaceWrapper converts echo contexts to parameters.
@@ -29,17 +29,17 @@ type ServerInterfaceWrapper struct {
 	Handler ServerInterface
 }
 
-// AddAccount converts echo context to params.
-func (w *ServerInterfaceWrapper) AddAccount(ctx echo.Context) error {
+// PostAccount converts echo context to params.
+func (w *ServerInterfaceWrapper) PostAccount(ctx echo.Context) error {
 	var err error
 
 	// Invoke the callback with all the unmarshaled arguments
-	err = w.Handler.AddAccount(ctx)
+	err = w.Handler.PostAccount(ctx)
 	return err
 }
 
-// AccountIdGet converts echo context to params.
-func (w *ServerInterfaceWrapper) AccountIdGet(ctx echo.Context) error {
+// GetAccount converts echo context to params.
+func (w *ServerInterfaceWrapper) GetAccount(ctx echo.Context) error {
 	var err error
 	// ------------- Path parameter "id" -------------
 	var id int64
@@ -50,12 +50,12 @@ func (w *ServerInterfaceWrapper) AccountIdGet(ctx echo.Context) error {
 	}
 
 	// Invoke the callback with all the unmarshaled arguments
-	err = w.Handler.AccountIdGet(ctx, id)
+	err = w.Handler.GetAccount(ctx, id)
 	return err
 }
 
-// AccountIdPut converts echo context to params.
-func (w *ServerInterfaceWrapper) AccountIdPut(ctx echo.Context) error {
+// PutAccount converts echo context to params.
+func (w *ServerInterfaceWrapper) PutAccount(ctx echo.Context) error {
 	var err error
 	// ------------- Path parameter "id" -------------
 	var id int64
@@ -66,7 +66,7 @@ func (w *ServerInterfaceWrapper) AccountIdPut(ctx echo.Context) error {
 	}
 
 	// Invoke the callback with all the unmarshaled arguments
-	err = w.Handler.AccountIdPut(ctx, id)
+	err = w.Handler.PutAccount(ctx, id)
 	return err
 }
 
@@ -98,8 +98,8 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 		Handler: si,
 	}
 
-	router.POST(baseURL+"/account", wrapper.AddAccount)
-	router.GET(baseURL+"/account/:id", wrapper.AccountIdGet)
-	router.PUT(baseURL+"/account/:id", wrapper.AccountIdPut)
+	router.POST(baseURL+"/account", wrapper.PostAccount)
+	router.GET(baseURL+"/account/:id", wrapper.GetAccount)
+	router.PUT(baseURL+"/account/:id", wrapper.PutAccount)
 
 }
