# internal/server/types.gen.go
@@ -1,7 +1,7 @@
-// Package account provides primitives to interact with the openapi HTTP API.
+// Package server provides primitives to interact with the openapi HTTP API.
 //
 // Code generated by github.com/deepmap/oapi-codegen version v1.15.0 DO NOT EDIT.
-package account
+package server
 
 // Account defines model for Account.
 type Account struct {
@@ -27,5 +27,8 @@ type NewAccount struct {
 	Name string `json:"name"`
 }
 
-// AddAccountJSONRequestBody defines body for AddAccount for application/json ContentType.
-type AddAccountJSONRequestBody = NewAccount
+// PostAccountJSONRequestBody defines body for PostAccount for application/json ContentType.
+type PostAccountJSONRequestBody = NewAccount
+
+// PutAccountJSONRequestBody defines body for PutAccount for application/json ContentType.
+type PutAccountJSONRequestBody = Account
